add doi citation

--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -45,6 +45,12 @@
     {% snippet "package/snippets/dates.html", pkg_dict=pkg %}
   {% endblock %}
 
+  {% block package_citation %}
+    {% if pkg.doi %}
+      {% snippet "doi/snippets/package_citation.html", pkg_dict=pkg %}
+    {% endif %}
+  {% endblock %}
+
   {% block package_metadata_source %}
     {% snippet "package/snippets/metadata_source.html", pkg_dict=pkg %}
   {% endblock %}
