fix infinite loop when organization image does not exist

--- a/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
+++ b/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
@@ -1,11 +1,12 @@
 <section class="metadata_source">
-  {% if harvest_object %}
   <h3>{{ _('Metadata Source') }}</h3>
   <table class="table table-bordered">
     <tbody>
       {% block package_metadata_source %}
           <tr>
-            <td style="width:76px;"><img src='../uploads/group/{{ pkg_dict.organization.image_url }}' style="max-height:50px; max-width: 50px;"/></td>
+            {% if pkg_dict.organization.image_url %}
+              <td style="width:76px;"><img src='../uploads/group/{{ pkg_dict.organization.image_url }}' style="max-height:50px; max-width: 50px;"/></td>
+            {% endif %}
             <td>
 	      {% set url = pkg_dict.extras | selectattr("key","equalto","h_source_url") | map(attribute="value") | join('') %}
 	      {% set source_guid = pkg_dict.extras | selectattr("key","equalto","guid") | map(attribute="value") | join('') %}
@@ -40,5 +41,4 @@
       {% endblock %}
     </tbody>
   </table>
-  {% endif %}
 </section>
