--- a/ckanext/cioos_theme/public/cioos_theme.css
+++ b/ckanext/cioos_theme/public/cioos_theme.css
@@ -12,6 +12,12 @@
     border-radius: 3px;
 }
 
+.media-grid {
+    background: none;
+    background-color: #f8f8f8;
+    border: 1px solid #52a7d7;
+}
+
 [role=main], .main {
     padding-top: 10px;
     background: none;
