--- a/ckanext/cioos_theme/templates/package/snippets/additional_info.html
+++ b/ckanext/cioos_theme/templates/package/snippets/additional_info.html
@@ -84,12 +84,12 @@
           {% set items_to_skip = ['graphic-preview-description', 'coupled-resource', 'graphic-preview-type', 'spatial_harvester',
               'bbox-east-long', 'bbox-north-lat', 'bbox-south-lat', 'bbox-west-long', 'spatial', 'temporal-extent-begin' ,'temporal-extent-end',
               'metadata-date', 'dataset-reference-date', 'frequency-of-update', 'graphic-preview-file', 'licence', 'access_constraints',
-		'guid','h_job_id','h_object_id','h_source_id','h_source_title','h_source_url','gn_localized_url','gn_view_metadata_url'] %}
+		          'guid','h_job_id','h_object_id','h_source_id','h_source_title','h_source_url','gn_localized_url','gn_view_metadata_url'] %}
 
           {% for extra in h.sorted_extras(pkg_dict.extras) %}
             {% set key, value = extra %}
 
-            {% if key in items_to_skip %}
+            {% if key in items_to_skip or key.endswith('_translated')  %}
               {# do nothing #}
 
             {% elif (_('responsible-party') == key) or ('responsible-party' == key) %}
