--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -24,24 +24,23 @@
     </h1>
 
     {% block package_notes %}
+      {# this block will be overwriten by scheming/package/read.html if the scheming extension is being used #}
       {%- if not dataset_type -%}
         <p>
         dataset_type not passed to template. your version of CKAN
         might not be compatible with ckanext-scheming
         </p>
       {%- endif -%}
-      {% if ( h.scheming_field_by_name(schema.dataset_fields, 'notes') or h.scheming_field_by_name(schema.dataset_fields, 'notes_translated') ) and get_translated(pkg, 'notes') %}
+      {% if ( h.scheming_field_by_name(schema.dataset_fields, 'notes') or h.scheming_field_by_name(schema.dataset_fields, 'notes_translated') ) and h.get_translated(pkg, 'notes') %}
         <div class="notes embedded-content">
           {{ h.render_markdown(h.get_translated(pkg, 'notes')) }}
         </div>
       {% endif %}
     {% endblock %}
 
-    <a href="{{ h.url_for('package_export', package_id=pkg.name, file_format='datacite', extension='xml')}}" class="btn"><i class="fa fa-icon fa-file-text"></i>{{ _(' EnviDat DataCite ')}}</a>
-    <a href="{{ h.url_for('package_export', package_id=pkg.name, file_format='iso19139', extension='xml')}}" class="btn"><i class="fa fa-icon fa-file-text"></i>{{ _(' EnviDat ISO 19139 ')}}</a>
     <a href="{{ h.url_for('package_export', package_id=pkg.name, file_format='cioos', extension='xml')}}" class="btn"><i class="fa fa-icon fa-file-text"></i>{{ _(' CIOOS ISO 19139 ')}}</a>
-    <a href="{{ h.url_for('package_export', package_id=pkg.name, file_format='gcmd_dif', extension='xml')}}" class="btn"><i class="fa fa-icon fa-file-text"></i>{{ _(' EnviDat GCMD DIF ')}}</a>
-
+    <a href="{{ h.url_for(controller='package', action='read', id=pkg.id) }}" class="btn"><i class="fa fa-icon fa-link"></i>{{ _(' Show Permalink ')}}</a>
+    
   {% endblock %}
 
   {% block package_access %}
