--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -40,7 +40,7 @@
 
     <a href="{{ h.url_for('package_export', package_id=pkg.name, file_format='cioos', extension='xml')}}" class="btn"><i class="fa fa-icon fa-file-text"></i>{{ _(' CIOOS ISO 19139 ')}}</a>
     <a href="{{ h.url_for(controller='package', action='read', id=pkg.id) }}" class="btn"><i class="fa fa-icon fa-link"></i>{{ _(' Show Permalink ')}}</a>
-    
+
   {% endblock %}
 
   {% block package_access %}
@@ -70,7 +70,7 @@
   {% endblock %}
 
   {% block package_tags %}
-    {% snippet "package/snippets/tags.html", tags=pkg.tags %}
+    {% snippet "package/snippets/tags.html", tags=pkg.get('keywords', {})[h.lang()] %}
   {% endblock %}
 
   {% set dataset_extent = h.get_pkg_dict_extra(c.pkg_dict, 'spatial') or c.pkg_dict.get('spatial') %}
