--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -62,11 +62,13 @@
 {% endblock %}
 <!-- TOP MENU STARTS HERE -->
 <header id="topmenu">
-  <ul>
-    <li><a href="http://cioos-pacific-wordpress-theme/fr/accueil/" tabindex="0" aria-label="French/English">FR</a></li>
-    <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook">Faceboook</a></li>
-    <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter">Twitter</a></li>
-  </ul>
+  <nav>
+    <ul>
+      <li><a href="http://cioos-pacific-wordpress-theme/fr/accueil/" tabindex="0" aria-label="French/English">FR</a></li>
+      <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook">Faceboook</a></li>
+      <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter">Twitter</a></li>
+    </ul>
+  </nav>
 </header>
 <header id="mainmenu">
   <a class="logo" href="{{ h.url_for('home.index') }}"><img src="/base/images/logoEN.svg"></a>
