--- a/ckanext/cioos_theme/public/cioos_theme.css
+++ b/ckanext/cioos_theme/public/cioos_theme.css
@@ -189,3 +189,14 @@ body {
   font-weight: bold;
   text-transform: uppercase;
 }
+
+.wrapper {
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+    position: relative;
+    min-height: 300px;
+    background-color: #e9e9e9;
+}
