--- a/ckanext/cioos_theme/public/cioos_theme.css
+++ b/ckanext/cioos_theme/public/cioos_theme.css
@@ -189,14 +189,13 @@ body {
   font-weight: bold;
   text-transform: uppercase;
 }
-
+.box,
 .wrapper {
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+    background-color: #F8F8F8;
+    border: 1px solid #52A79B;
+    border-width: 0 0 0 4px;
+    border-radius: 0;
+    box-shadow: none;
     position: relative;
     min-height: 300px;
-    background-color: #e9e9e9;
 }
